# postgresql-simple-named

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  postgresql-simple-named.cabal  stack-8.4.4.yaml  stack-8.6.5.yaml  stack-8.8.4.yaml  stack-9.0.2.yaml  stack-9.12.2.yaml  stack-9.4.5.yaml  stack-9.6.2.yaml  stack-9.6.4.yaml  stack-9.6.6.yaml  stack-9.6.7.yaml  stack-9.8.1.yaml  stack-9.8.2.yaml  stack.yaml
.github/workflows/: haskell-ci.yml
src/: PgNamed.hs  PostgresqlSimpleNamed.hs
test/: Doctest.hs  Spec.hs
