cabal-version:       2.0
name:                postgresql-simple-named
version:             0.0.0.0
synopsis:            Implementation of named parameters for `postgresql-simple` library
description:         Implementation of named parameters for `postgresql-simple` library
homepage:            https://github.com/Holmusk/postgresql-simple-named
bug-reports:         https://github.com/Holmusk/postgresql-simple-named/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Holmusk
maintainer:          Holmusk<tech@holmusk.com>
copyright:           2019 Holmusk
category:            Database
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.4

source-repository head
  type:                git
  location:            https://github.com/Holmusk/postgresql-simple-named.git

library
  hs-source-dirs:      src
  exposed-modules:     PostgresqlSimpleNamed
                       

  build-depends:       base ^>= 4.12.0.0
                     

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

test-suite postgresql-simple-named-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base ^>= 4.12.0.0
                     , postgresql-simple-named
                     

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns
